<resources>
    <string name="app_name">Counter App</string>
    <string name="i_agree_with_thepolicy_under"><u>I agree with the Privacy Policy</u></string>
    <string name="i_agree_with_thepolicy">I agree with the Privacy Policy</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="NoData">No Data Found</string>
    <string name="welcomeNote">Welcome to PROVIZIT - Your VMS.</string>
    <string name="CounterList">Counter List</string>
    <string name="Do_you_want_to_exit_the_application">Do you want to exit the Application?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="confirm">Confirm</string>
    <string name="logout_note">Are you sure you want to logout?</string>
    <string name="EnterYourPassword">Enter Your Password</string>
    <string name="PleaseEnterCorrectPassword">Please enter correct password</string>
</resources>