<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_medium"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/title_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/logout_note"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/roboto_medium"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/hash"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/txtWorning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/PleaseEnterCorrectPassword"
            android:textColor="@color/a_color"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/roboto_medium"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@null"
            android:textSize="@dimen/_15ssp"
            android:hint="@string/EnterYourPassword"
            android:inputType="textPassword"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_yes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Yes"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="40dp"
                android:background="@color/hash"/>
            <TextView
                android:id="@+id/txt_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/No"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/hash"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>