<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    tools:context=".Logins.LoginActivity">

    <RelativeLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/welcomeNote"
                android:textAlignment="center"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/useidLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tag"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userid_at"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:hint="@string/Email"
                    app:boxBackgroundColor="#ffffff"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/roboto_light"
                        android:inputType="text"
                        android:padding="12dp"
                        android:paddingStart="18dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_st"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/useidLinear"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                android:hint="@string/Password"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userid_at"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_light"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:paddingStart="18dp"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_st"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Forgot Password ? "
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linear_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/i_agree_with_thepolicy_under"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_privacy"
                android:layout_centerInParent="true"
                android:background="@drawable/ripple"
                android:fontFamily="@font/roboto_bold"
                android:padding="10dp"
                android:text="@string/Login"
                android:textColor="#fff" />

        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>